--- a/stable/latest/book/list_widgets.html
+++ b/stable/latest/book/list_widgets.html
@@ -269,7 +269,7 @@ So let's create a custom GObject <code>IntegerObject</code> that which is initia
 
 impl IntegerObject {
     pub fn new(number: i32) -&gt; Self {
-        Object::new(&amp;[(&quot;number&quot;, &amp;number)])
+        Object::builder().property(&quot;number&quot;, number).build()
     }
 }
 <span class="boring">
@@ -775,7 +775,7 @@ For that we first add the method <code>increase_number</code> to our <code>Integ
 </span><span class="boring">
 </span>impl IntegerObject {
     pub fn new(number: i32) -&gt; Self {
-        Object::new(&amp;[(&quot;number&quot;, &amp;number)])
+        Object::builder().property(&quot;number&quot;, number).build()
     }
 
     pub fn increase_number(self) {
