--- a/stable/latest/book/saving_window_state.html
+++ b/stable/latest/book/saving_window_state.html
@@ -187,7 +187,7 @@ First, we create one and add convenience methods for accessing settings as well 
 impl Window {
     pub fn new(app: &amp;Application) -&gt; Self {
         // Create new window
-        Object::new(&amp;[(&quot;application&quot;, app)])
+        Object::builder().property(&quot;application&quot;, app).build()
     }
 
     fn setup_settings(&amp;self) {
