deploy: 747ec0e1753f8031e4368d8290daa2c122faf1ac

--- a/stable/latest/book/g_object_subclassing.html
+++ b/stable/latest/book/g_object_subclassing.html
@@ -192,11 +192,11 @@ glib::wrapper! {
 
 impl CustomButton {
     pub fn new() -&gt; Self {
-        Object::builder().build()
+        Object::new(&amp;[])
     }
 
     pub fn with_label(label: &amp;str) -&gt; Self {
-        Object::builder().property(&quot;label&quot;, label).build()
+        Object::new(&amp;[(&quot;label&quot;, &amp;label)])
     }
 }
 <span class="boring">
